Fix sidebar overflow behavior

--- a/src/app.css
+++ b/src/app.css
@@ -17,6 +17,7 @@ main {
 
 #hud {
   height: 100%;
+  overflow-y: scroll;
 }
 
 .map-layer {
